# agoric-inter-dashboard

./: .dockerignore  .env.example  .eslintrc  .gitignore  .prettierrc  Dockerfile  README.md  cypress.config.ts  deploy.example.yaml  docker-compose.yml  extract-balances.sh  extract-coingeko.sh  extract-missing-blocks.sh  extract-slo-metrics.sh  extract-tendermint.sh  index.html  jest.config.ts  package.json  tailwind.config.js  tendermint.catalog.json  tsconfig.json  vite.config.ts
balances-extractor/: README.md  main.py
bqreader/: README.md  go.mod  go.sum  main.go  test.sh
coingeko-extractor/: main.py
coordinator/: README.md  go.mod  go.sum  main.go  run.sh  server.go
cube/: Dockerfile  README.md  cube.js  utils.js  views.sql
dashboard/: .gitignore  Dockerfile  README.md  nginx-boot.sh  package.json  vite.config.ts
docs/: architecture.md  deploy.md  overview.md  queries.md  requests.md
e2e/: dashboard_requests_test.py
http-processor/: README.md  go.mod  main.go  processor.go
infra/: cube.md  dashboard.yaml  ingress.yaml
old_models/: balances.js  liquidated_vaults.js  open_vaults.js  oracle_prices.js  psm_stats.js  reserve_allocations.js  state_changes.js  tendermint_slo_metrics.js  vault_managers.js  vault_metrics.js  vaults.js  wallet_purses.js
oldapi/: Dockerfile  README.md  main.py  pyproject.toml
patches/: 0001-feat-add-a-txdecode-command.patch  target-bigquery.patch
perf/: README.md  oracle_prices.json  psm_stats_query.json  requests.txt  (+2 more)
tendermint-normalizer/: README.md  main.py  main_test.py  pyproject.toml  requirements.txt
(+282 files in other folders)
