[tool.poetry]
name = "oldapi"
version = "0.1.0"
description = ""
authors = ["p2p"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
flask = "^3.0.0"
flask-caching = "^2.1.0"
waitress = "^2.1.2"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
